# src/main/java/com/projetoExtensao/arenaMafia/infrastructure/web/priceRule/PriceRuleController.java
@@ -11,7 +11,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
-@RequestMapping("/api/price-rules")
+@RequestMapping("/api/public/price-rules")
 public class PriceRuleController {
 
   private final PriceRuleMapper priceRuleMapper;
