# src/main/resources/static/docs/openapi.yml
@@ -43,6 +43,9 @@ tags:
   - name: "Usuário - Minha Conta - Alteração de Telefone"
     description: Endpoints relacionados à alteração do número de telefone do usuário autenticado.
 
+  - name: "Usuário - Agendamento de Horários"
+    description: Endpoints relacionados ao agendamento de horários para os usuários autenticados.
+
   - name: "Administração - Gerenciamento de Usuários"
     description: Endpoints relacionados ao gerenciamento de usuários, acessíveis apenas por administradores.
 
@@ -150,6 +153,15 @@ components:
     AdminCourtResponseDto:
       $ref: "./components/schemas/court/AdminCourtResponseDto.yml"
 
+    AvailableSlotResponseDto:
+      $ref: "./components/schemas/schedule/AvailableSlotResponseDto.yml"
+    CreateReservationRequestDto:
+      $ref: "./components/schemas/schedule/CreateReservationRequestDto.yml"
+    ScheduleEntryResponseDto:
+      $ref: "./components/schemas/schedule/ScheduleEntryResponseDto.yml"
+    ReservationScheduleResponseDto:
+      $ref: "./components/schemas/schedule/ReservationScheduleResponseDto.yml"
+
   responses:
     InternalServerError:
       $ref: "./components/responses/InternalServerError.yml"
@@ -214,6 +226,13 @@ paths:
   /api/users/me/disable:
     $ref: "./paths/user/DisableAccount.yml"
 
+  /api/schedules/available-slots:
+    $ref: "./paths/schedule/GetAvailableTimes.yml"
+  /api/users/me/reservations:
+    $ref: "./paths/schedule/Reservations.yml"
+  /api/users/me/reservations/{id}:
+    $ref: "./paths/schedule/ReservationById.yml"
+
   /api/admin/users:
     $ref: "./paths/admin/users/GetUsers.yml"
   /api/admin/users/{userId}/status:
@@ -260,12 +279,11 @@ paths:
   /api/admin/operating-rules/{operatingHoursId}/disable:
     $ref: "./paths/admin/operatingHours/OperatingHoursDisable.yml"
 
-  /api/modalities:
+  /api/public/modalities:
     $ref: "./paths/modality/GetAllModalities.yml"
-  /api/price-rules:
+  /api/public/price-rules:
     $ref: "./paths/priceRule/GetAllPriceRules.yml"
-  /api/operating-rules:
+  /api/public/operating-hours:
     $ref: "./paths/operatingHours/GetAllOperatingHours.yml"
-  /api/homepage:
+  /api/public/homepage:
     $ref: "./paths/homepage/GetHomePageData.yml"
-
